welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:3: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
  if(a+b=10 || a=10 || b=10)
      ^makes10:3: error: value || is not a member of Int
  if(a+b=10 || a=10 || b=10)
            ^makes10:3: error: value || is not a member of Int
  if(a+b=10 || a=10 || b=10)
                    ^